updated copyright and dependencies

--- a/MetaFac.Platform/MetaFac.Platform.csproj
+++ b/MetaFac.Platform/MetaFac.Platform.csproj
@@ -14,7 +14,7 @@
 		<Company>MetaFac</Company>
 		<Product>Platform</Product>
 		<PackageLicenseUrl></PackageLicenseUrl>
-		<Copyright>Copyright (c) 2022 MetaFac</Copyright>
+		<Copyright>Copyright (c) 2020-2023 MetaFac</Copyright>
 		<Authors>MetaFac Contributors</Authors>
 		<PackageProjectUrl>https://dev.azure.com/MetaFac/OSR</PackageProjectUrl>
 		<RepositoryUrl>https://dev.azure.com/MetaFac/OSR/_git/Platform</RepositoryUrl>
