--- a/MetaFac.Platform.Testing/MetaFac.Platform.Testing.csproj
+++ b/MetaFac.Platform.Testing/MetaFac.Platform.Testing.csproj
@@ -14,8 +14,8 @@
 	<Company>MetaFac</Company>
     <Product>Platform</Product>
     <PackageLicenseUrl></PackageLicenseUrl>
-    <Copyright>Copyright (c) 2022 MetaFac</Copyright>
-    <Authors>MetaFac Contributors</Authors>
+    <Copyright>Copyright (c) 2020-2023 MetaFac</Copyright>
+	<Authors>MetaFac Contributors</Authors>
     <PackageProjectUrl>https://dev.azure.com/MetaFac/OSR</PackageProjectUrl>
     <RepositoryUrl>https://dev.azure.com/MetaFac/OSR/_git/Platform</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
